# counterfact

./: .pre-commit-config.yaml  README.rst  pyproject.toml  setup.cfg
test/: test_counterfact.py
