[tool.poetry]
name = "counterfact"
version = "0.0.1-dev"
description = ""
authors = ["nate giraldi <ng269@cornell.edu>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^1.21.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
  | wheels
)/
'''

[tool.isort]
apply = 1
default_section = "THIRDPARTY"
filter_files = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "counterfact"
known_third_party = []
line_length = 88
lines_between_types = 0
multi_line_output = 3
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
use_parentheses = true

[build-system]
requires = ["poetry==1.0.2"]
build-backend = "poetry.masonry.api"
